fixed custom scrollbar

--- a/parcial-1/tabla-responsive/style.css
+++ b/parcial-1/tabla-responsive/style.css
@@ -31,8 +31,6 @@ table td, th {
         position: relative;
         display: flex;
         flex-direction: row;
-        /*width: 80%;
-        overflow-x: scroll;*/
         padding: 0 5px;
         padding-top: 20px;
         margin: 10px 0;
@@ -51,6 +49,7 @@ table td, th {
         display: flex;
         flex-direction: column;
         height: 100%;
+        padding-bottom: 10px;
     }
 
     table thead tr th {
@@ -59,6 +58,7 @@ table td, th {
     }
     
     table tbody {
+        position: relative;
         display: flex;
         width: 80%;
         overflow-x: scroll;
@@ -77,6 +77,21 @@ table td, th {
         height: 60px;
         width: 100px;
         font-size: 0.9em;
+    }
+
+    ::-webkit-scrollbar {
+        height: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: transparent;
+    }
+        
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #adadad;
+        border-radius: 5px;
     }
 }
 
